--- a/Assignment1/Dog.html
+++ b/Assignment1/Dog.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Dog Image</title>
 	<meta charset="UTF-8">
-	<img src="C:\Users\david\Desktop\HTML Documents\DogImage.png">
+	<img src="DogImage.png">
 </head>
 <body>
 	<nav>   
