--- a/Project/Index.html
+++ b/Project/Index.html
@@ -33,7 +33,7 @@
 					<!-- PHOTO CONTAINER 1 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_1.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_1.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -45,7 +45,7 @@
 					<!-- PHOTO CONTAINER 2 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_2.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_2.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -57,7 +57,7 @@
 					<!-- PHOTO CONTAINER 3 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_3.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_3.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -69,7 +69,7 @@
 					<!-- PHOTO CONTAINER 4 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_4.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_4.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -81,7 +81,7 @@
 					<!-- PHOTO CONTAINER 5 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_5.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_5.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -93,7 +93,7 @@
 					<!-- PHOTO CONTAINER 6 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_6.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_6.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -105,7 +105,7 @@
 					<!-- PHOTO CONTAINER 7 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_7.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_7.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -117,7 +117,7 @@
 					<!-- PHOTO CONTAINER 8 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_8.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_8.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
@@ -129,7 +129,7 @@
 					<!-- PHOTO CONTAINER 9 -->
 					<div>
 						<div>
-							<img src="./Images/thumb/thumbnail_9.jpg" alt="Space Picture">
+							<img src="./Images/thumb/thumbnail_9.jpg" alt="">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have several space launches departing daily, book your flight today</p>
