--- a/Project/Basic_HTML_Template.html
+++ b/Project/Basic_HTML_Template.html
@@ -2,30 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./CSS/Basic_Style.css">
         <title>Basic HTML Template</title>
     </head>
 
     <body>
-        <div>
-            <h1>Basic CSS Demo</h1>
-        </div>
 
-        <div class="container">
-            <div class="squares">
-                <p>Box 1</p>
-            </div>
-
-            <div class="squares">
-                <p>Box 2</p>
-            </div>
-
-            <div class="squares">
-                <p>Box 3</p>
-            </div>
-
-            <div class="squares">
-                <p>Box 4</p>
-            </div>
-        </div>
     </body>
 </html>
