--- a/David_Buckingham_Portfolio/Index.html
+++ b/David_Buckingham_Portfolio/Index.html
@@ -15,8 +15,8 @@
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
             <a href="#About">About</a>
-            <a href="Github">GitHub</a>
-            <a href="Contact">Contact</a>
+            <a href="#Github">GitHub</a>
+            <a href="#Contact">Contact</a>
         </div>
         <!--Adding some breaks to add space between navbar and heading-->
         <br>
