--- a/One-Page Website/One_page_website.html
+++ b/One-Page Website/One_page_website.html
@@ -4,7 +4,8 @@
 		<title>One-Page-Website</title>
 		<meta charset="Utf-8">
 		<link rel ="stylesheet" href="Shared.css">
-		 <link rel ="stylesheet" href="Animations.css"> 
+		<link rel ="stylesheet" href="Animations.css"> 
+		<script src="JS/one_page_website.js"></script>
 	</head>
 	<body>
 		<!-- Nav -->
@@ -38,9 +39,9 @@
 					<!-- PHOTO CONTAINER 1 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_1.jpg" alt="">
-							<div class="photo-overlay">
-								<h3 class="white-head">Click for more info</h3>
+							<img src="./Images/thumb/thumbnail_1.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(1)">
+								<h3 class="white-head" >Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
 						</div>
@@ -50,8 +51,8 @@
 					<!-- PHOTO CONTAINER 2 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_2.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_2.jpg"  alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(2)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -62,8 +63,8 @@
 					<!-- PHOTO CONTAINER 3 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_3.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_3.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(3)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -74,8 +75,8 @@
 					<!-- PHOTO CONTAINER 4 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_4.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_4.jpg" class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(4)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -86,8 +87,8 @@
 					<!-- PHOTO CONTAINER 5 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_5.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_5.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(5)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -98,8 +99,8 @@
 					<!-- PHOTO CONTAINER 6 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_6.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_6.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(6)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -110,8 +111,8 @@
 					<!-- PHOTO CONTAINER 7 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_7.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_7.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(7)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -122,8 +123,8 @@
 					<!-- PHOTO CONTAINER 8 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_8.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_8.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(8)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -134,8 +135,8 @@
 					<!-- PHOTO CONTAINER 9 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./Images/thumb/thumbnail_9.jpg" alt="">
-							<div class="photo-overlay">
+							<img src="./Images/thumb/thumbnail_9.jpg"  class="hover-shadow" alt="">
+							<div class="photo-overlay" onclick="openModal(); currentSlide(9)">
 								<h3 class="white-head">Click for more info</h3>
 								<p>Choose a location and book your flight today</p>
 							</div>
@@ -146,6 +147,107 @@
 			</div>
 		</section>
 		<!-- END GALLERY -->
+		<section>
+		<!-- The Modal/Lightbox -->
+			<div id="myModal" class="modal">
+				<span class="close cursor" onclick="closeModal()">&times;</span>
+				<div class="modal-content">
+
+					<!-- Caption text -->
+	  				<div class="caption-container">
+						<p id="caption"></p>
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">1 / 9</div>
+						<img src="./Images/thumb/thumbnail_1.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">2 / 9</div>
+						<img src="./Images/thumb/thumbnail_2.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">3 / 9</div>
+						<img src="./Images/thumb/thumbnail_3.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">4 / 9</div>
+						<img src="./Images/thumb/thumbnail_4.jpg" style="width:100%">
+	  				</div>
+					  <div class="mySlides">
+						<div class="numbertext">5 / 9</div>
+						<img src="./Images/thumb/thumbnail_5.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">6 / 9</div>
+						<img src="./Images/thumb/thumbnail_6.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">7 / 9</div>
+						<img src="./Images/thumb/thumbnail_7.jpg" style="width:100%">
+	  				</div>
+  
+	  				<div class="mySlides">
+						<div class="numbertext">8 / 9</div>
+						<img src="./Images/thumb/thumbnail_8.jpg" style="width:100%">
+	  				</div>
+					  
+					<div class="mySlides">
+						<div class="numbertext">9 / 9</div>
+						<img src="./Images/thumb/thumbnail_9.jpg" style="width:100%">
+	  				</div>
+  
+	  				<!-- Next/previous controls -->
+	  				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	  				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+	 				 <!-- Caption text -->
+	  				<div class="caption-container">
+						<p id="caption"></p>
+	  				</div>
+  
+	 				 <!-- Thumbnail image controls -->
+	  				<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_1.jpg" onclick="currentSlide(1)" alt="Rio de Janeiro">
+	  				</div>
+  
+	  				<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_2.jpg" onclick="currentSlide(2)" alt="Italy">
+	  				</div>
+  
+	  				<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_3.jpg" onclick="currentSlide(3)" alt="Nigra Falls">
+	  				</div>
+  
+	 				 <div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_4.jpg" onclick="currentSlide(4)" alt="Paris">
+	  				</div>
+					  <div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_5.jpg" onclick="currentSlide(5)" alt="Kyoto">
+	  				</div>
+  
+	  				<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_6.jpg" onclick="currentSlide(6)" alt="Venice">
+	  				</div>
+  
+	  				<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_7.jpg" onclick="currentSlide(7)" alt="Madrid">
+	  				</div>
+  
+	 				 <div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_8.jpg" onclick="currentSlide(8)" alt="Lisbon">
+	  				</div>
+					<div class="column">
+						<img class="demo" src="./Images/thumb/thumbnail_9.jpg" onclick="currentSlide(9)" alt="Tokyo">
+	  				</div>
+				</div>
+  			</div>
+		</section>
 
 		<!-- VIDEO -->
 		<section id="video">
