--- a/Bootstrap4_project/academy_cinemas.html
+++ b/Bootstrap4_project/academy_cinemas.html
@@ -11,6 +11,7 @@
     <title>Academy Cinemas</title>
   </head>
   <body>
+    
     <div class="container">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-info">
             <div class="container">
@@ -122,18 +123,71 @@
               </div>
         </div>
 
-
-         <!--/Showtimes-->
-        <div class="text-center" id="deals">
-            <form>
-                <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
-                <div class="mb-3">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
+        <!--Jumbotron heading-->
+        <div class="jumbotron jumbotron-fluid bg-info mt-10 text-center">
+          <div class="container">
+            <h1 class="display-4" style="color: #fff; font-family: roboto; font-weight: 500; text-transform: uppercase;">Movie Deals</h1>
+            <p class="lead">Check out our monthly deals. . .</p>
+            <!--Movie Deals-->
+            <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthly movie deals</button>
+          </div>
         </div>
-          
+        <!--/movie deals-->
+        <!--Sign up form-->
+        <div class="row">
+          <div class="container text-center col-md-6" id="deals">
+            <div class="container text-center">
+              <h1 class="display-5 my-4 col-lg-auto text-primary">Stay current on top movies!</h1>
+              <div class="input-group mb-5 input-group-sm">
+                <input type="text" class="form-control" placeholder="Email">
+                <span class="input-group-btn">
+                  <button type="button" style="color: white" class="btn btn-primary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to receive great movie rewards deals.">
+                    Sign Up!
+                  </button>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--/Sign up form-->
+        <!--Form Modal-->
+        <div class="modal fade" id="register">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Register to receive movie deals</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <fieldset class="form-group">
+                    <lable for="firstname">First Name:</lable>
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name. . .">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="lastname">Last Name:</label>
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name. . .">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Email. . .">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password. . .">
+                  </fieldset>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--/form modal-->
           <div class="container my-5">
               <ul class="nav nav-inline">
                 <li class="nav-item">
@@ -153,16 +207,15 @@
 
 
     </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script>
+      //jquery action for popover
+        $('.popover-dismiss').popover({
+          trigger: 'focus'
+          })
+    </script>
   </body>
 </html>
